--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <div class="container">
       <h1>jQuery - Spindle</h1>
-      <p>Minimalist spinners. Get it <a href=#https://github.com/jtrussell/jquery.spindle">here</a>.</p>
+      <p>Minimalist spinners. Get it <a href="https://github.com/jtrussell/jquery.spindle">here</a>.</p>
       <h3>Example - Standalone Spinners</h3>
       <p class="quarters">
         <span class="spindle-on spindle-lg"></span>
