Add not about using data-spindle-text

--- a/index.html
+++ b/index.html
@@ -43,8 +43,11 @@
         <li>Toggle a spinner's state: <br>
         <code>$('...').spindle(); /* you can pass 'toggle' too */</code></li>
 
-        <li>Provide your own spinner text:<br>
+        <li>Provide your own spinner text (<code>js</code>):<br>
         <code>$('...').spindle({text: '@'});</code></li>
+
+        <li>Provide your own spinner text (<code>html</code>):<br>
+        <code>&lt;span data-spindle-text="@"&gt;&lt;/span&gt;</code></li>
 
         <li>Add custom css to a spinner:<br>
         <code>$('...').spindle({css: {paddingRight: '10px'}});</code></li>
